--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "nuxt": "2.0.0",
+    "socket.io": "2.3.0",
+    "socket.io-client": "2.3.0"
   },
   "devDependencies": {}
 }
